Fix mobile overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,7 +25,6 @@ html {
 body {
   background-color: black;
   color: white;
-  overflow-x: hidden;
 }
 
 * {
